apps/base/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - env:
          - name: TZ
            value: "Africa/Johannesburg"
          name: home-assistant
          image: homeassistant/home-assistant:2022.12.4
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: "/config"
              name: config
      hostNetwork: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
