apps/base/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  serviceName: "home-assistant"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - env:
          - name: TZ
            value: "Africa/Johannesburg"
          name: home-assistant
          image: homeassistant/home-assistant:2026.1
          ports:
            - containerPort: 8123
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8123
          #     scheme: HTTP
          #   initialDelaySeconds: 60
          #   failureThreshold: 3
          #   timeoutSeconds: 10
          # startupProbe:
          #   httpGet:
          #     path: /
          #     port: 8123
          #     scheme: HTTP
          #   failureThreshold: 6
          #   periodSeconds: 10
          volumeMounts:
            - mountPath: "/config"
              name: config
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
