apps/base/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  rules:
  - host: hass.myhaus.co.za
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - hass.myhaus.co.za
